tests/neg-custom-args/captures/class-uses.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/class-uses.scala:17:22 ---------------------------------
17 |      Console.println(g.toString) // error
   |                      ^
   |                      Reference `A.this.g` is not included in the allowed capture set {A.this.f}
   |                      of the enclosing class B in class A.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/class-uses.scala:21:22 ---------------------------------
21 |      Console.println(f.toString) // error
   |                      ^
   |                      Reference `A.this.f` is not included in the allowed capture set {}
   |                      of the enclosing class C in class A.
   |
   |                      External uses should be declared explicitly with a uses clause in class C:
   |
   |                          uses A.this.f
